--- a/app/src/main/res/layout/item_dispute.xml
+++ b/app/src/main/res/layout/item_dispute.xml
@@ -25,4 +25,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Weight long long long long"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
