--- a/app/src/main/res/layout/fragment_dispute_add.xml
+++ b/app/src/main/res/layout/fragment_dispute_add.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
-    android:layout_height="wrap_content"
+    android:layout_height="350dp"
     tools:context=".view.dispute.DisputeAddFragment"
     android:background="@color/primaryColor"
     android:orientation="vertical">
@@ -17,19 +17,23 @@
         android:gravity="center"/>
 
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/addDisputeItemName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:hint="@string/addDisputeName"
-        android:padding="11dp"
+        android:padding="10dp"
         android:background="@color/white"
         android:layout_marginBottom="11dp"
         android:inputType="text"/>
 
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/addDisputeItemWeight"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:hint="@string/addDisputeWeight"
-        android:padding="11dp"
+        android:padding="10dp"
         android:background="@color/white"
         android:layout_marginBottom="11dp"
         android:inputType="text"/>
